Fix Why Choose image alignment - center vertically

--- a/src/css/topup.css
+++ b/src/css/topup.css
@@ -1291,8 +1291,9 @@ a:hover {
 
 .wc-new-right {
     flex: 1;
-    position: sticky;
-    top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .wc-new-img-wrap {
     position: relative;
